# pi-loop-console

./: .gitignore  .mailmap  CMakeLists.txt  Doxyfile  Makefile  Makefile_  PILOOP_SETTINGS  README.md  UPDATES  _configuration.json  _configuration_template.json  d2m_groove.ipynb  piloop  piloop.drawio  quick_compile.sh  readme.md  start.sh
GPIO/: BUTTON_LED_SETUP
GPIO/wiringPi_example1/: Makefile  wpapp  wpmain.cpp
GPIO/wiringPi_example2/: Makefile  wpapp2  wpmain.cpp
GPIO/wiringPi_example3/: push_button.cpp  pushbutton
GPIO/wiringPi_example4/: push_led.cpp  pushled  tog  toggle.cpp
GPIO/wiringPi_example5/: push_toggle_led.cpp  togled
_integrate/: Makefile  audioserver.cpp  audioserver.h  main.cpp
code/: audiotrack.cpp  audiotrack.h  channel.cpp  channel.h  handshake.cpp  handshake.h  main.cpp  route.cpp  route.h  server.cpp  session.h  track.cpp
d2m/: d2m_groove.ipynb  d2m_groove.py  main.py  paths.py  readme.md
d2m/data/: audio.py  midifile.py  note.py  segment.py  utils.py  waveform.py
d2m/dependencies/: piloop.yml  readme.md  restore-conda-envs.sh
d2m/model/: example2.py  lstm.py
d2m/src/: audio.py  augmentation.py  data.py  dataloader.py  hyperparams.py  main.py  midifile.py  model.py  models.py  note.py  paths.py  preprocess.py  segment.py  utils.py
d2m/tempfiles_/: d2m_groove.ipynb  d2m_groove.py  data.py  main.ipynb
d2m/tests/: 1test_midi_note_audio.py  2test_total_seconds_midi_audio.py  3.raw_2_waveform.py  readme.md
data/: ReadMe.md
doc/html/: annotated.html  audiotrack_8cpp.html  audiotrack_8cpp_source.html  audiotrack_8h.html  audiotrack_8h_source.html  channel_8cpp.html  channel_8cpp_source.html  channel_8h.html  channel_8h_source.html  classaudiotrack-members.html  classaudiotrack.html  classchannel-members.html  classchannel.html  classes.html  classhandshake-members.html  classhandshake.html  classmiditrack-members.html  classmiditrack.html  classroute-members.html  classroute.html  classsession-members.html  classsession.html  classtrack-members.html  classtrack.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  handshake_8cpp.html  handshake_8cpp_source.html  handshake_8h.html  handshake_8h_source.html  hierarchy.html  index.html  (+25 more)
doc/latex/: annotated.tex  classaudiotrack.eps  classaudiotrack.tex  classchannel.tex  classhandshake.tex  classmiditrack.eps  classmiditrack.tex  classroute.eps  classroute.tex  classsession.tex  classtrack.tex  hierarchy.tex  refman.tex  structtrack__port.tex
documentation/html/: annotated.html  audio__settings_8h_source.html  audioserver_8h_source.html  buttons_8h_source.html  channel_8h_source.html  classAudioServer-members.html  classAudioServer.html  classButtons-members.html  classButtons.html  classChannel-members.html  classChannel.html  classConfig-members.html  classConfig.html  classEffects-members.html  classEffects.html  classHandshake-members.html  classHandshake.html  classKeyboard-members.html  classKeyboard.html  classLeds-members.html  classLeds.html  classLooper-members.html  classLooper.html  classMenu-members.html  classMenu.html  classMetronome-members.html  classMetronome.html  classMixer-members.html  classMixer.html  classMonitor-members.html  classMonitor.html  classPiLoop-members.html  classPiLoop.html  classPotentiometers-members.html  classPotentiometers.html  classScreen-members.html  classScreen.html  classSession-members.html  classSession.html  classUI-members.html  (+39 more)
documentation/latex/: annotated.tex  classAudioServer.tex  classButtons.tex  classChannel.tex  classConfig.tex  classEffects.tex  classHandshake.tex  classKeyboard.tex  classLeds.tex  classLooper.tex  classMenu.tex  classMetronome.tex  classMixer.tex  classMonitor.tex  classPiLoop.tex  classPotentiometers.tex  classScreen.tex  classSession.tex  classUI.tex  classhardwareInterface.tex  refman.tex  structLooperState.tex  structResponse.tex  structTrigger.tex  structtime__signature.tex
files/info/: future_work.md  install.md  manual.md  rpi-setup.md
files/uml/: piloop.drawio
gpio/buttons/: buttons.cpp  compile.sh  run
gpio/dev5_demo/: 1.potentiometer.py  2.buttons  2.buttons.cpp  2.buttons_BACKUP.cpp  2.compile.sh  exe  ioexp  ioexp_buttons.cpp  voltmeter.c  w1  w1.cpp
gpio/leds/: dmux  dmux.cpp
gpio/potentiometers/: compile.sh  mcp3008.cpp  run
gpio/threads/: buttons.cpp  compile.sh  run
include/: audio_settings.h  audioserver.h  buttons.h  channel.h  computer.h  config.h  controls.h  effects.h  gpio.h  handshake.h  interface.h  keyboard.h  looper.h  menu.h  metronome.h  mixer.h  monitor.h  orchestrator.h  piloop.h  response.h  session.h  track.h  trigger.h
include/computer/: keyboard.h  screen.h
include/effects/: reverb.h
include/gpio/: buttons.h  leds.h  potentiometers.h
midibank/: beeper.h
more/: record.cpp
more/metronome/: main.cpp  metronome.cpp  metronome.h
scripts/: build.sh  configure.sh  cpumem.sh  run.sh  start_jack.sh  stop.sh
scripts/gpio/: checkButtons.cpp  checkLeds.cpp  checkRotaries.cpp  turnOffLeds.cpp
src/: audioserver.cpp  channel.cpp  computer.cpp  config.cpp  effects.cpp  gpio.cpp  handshake.cpp  interface.cpp  keyboard.cpp  looper.cpp  main.cpp  menu.cpp  metronome.cpp  miditrack.cpp  miditrack.h  mixer.cpp  monitor.cpp  piloop.cpp  route.cpp  session.cpp  track.cpp  track.h
src/computer/: keyboard.cpp  (+1 more)
start_server/: Makefile  jack_control_start.sh  server_control  start_jack.cpp
(+276 files in other folders)
